# python-project-lvl2

./: .gitignore  .travis.yml  README.md  makefile  pyproject.toml  test1.py  travis.yml
gendiff/: generator.py  loader.py
gendiff/scripts/: gendiff_script.py
tests/: test.py  test_sample.py
